# AirPodsDesktop

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README-CN.md  README-TW.md  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linux.yml  windows.yml
CMake/: Utils.cmake
Docs/: Build.md
Source/: Application.cpp  Application.h  Assert.cpp  Assert.h  Config.h.in  Error.cpp  Error.h  ErrorHandle.cpp  ErrorHandle.h  Helper.h  Logger.cpp  Logger.h  Main.cpp  Opts.cpp  Opts.h  Status.h  Utils.h
Source/Core/: AirPods.cpp  AirPods.h  AppleCP.cpp  AppleCP.h  Base.h  Bluetooth.h  Bluetooth_abstract.h  Bluetooth_linux.cpp  Bluetooth_linux.h  Bluetooth_win.cpp  Bluetooth_win.h  Debug.cpp  Debug.h  GlobalMedia.h  GlobalMedia_abstract.h  GlobalMedia_linux.cpp  GlobalMedia_linux.h  GlobalMedia_win.cpp  GlobalMedia_win.h  LowAudioLatency.cpp  LowAudioLatency.h  Settings.cpp  Settings.h  Update.cpp  Update.h
Source/Core/OS/: Windows.h
Source/Gui/: Base.h  DownloadWindow.cpp  DownloadWindow.h  DownloadWindow.ui  InfoWindow.cpp  InfoWindow.h  InfoWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SelectWindow.cpp  SelectWindow.h  SelectWindow.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  SysTray.cpp  SysTray.h  TaskbarStatus.cpp  TaskbarStatus.h  TaskbarStatus.ui  TrayIcon.cpp  TrayIcon.h
Source/Gui/Widget/: Battery.cpp  Battery.h
Source/Resource/: Resource.qrc  Resource.rc
Source/Resource/Translation/: apd_bg_BG.ts  apd_de_DE.ts  apd_fr_FR.ts  apd_ja_JP.ts  apd_ko_KR.ts  apd_pt_PT.ts  apd_ru_RU.ts  apd_tr_TR.ts  apd_uk_UA.ts  apd_zh_CN.ts  apd_zh_TW.ts
Source/Resource/Video/: AirPods_1.avi  AirPods_1_2.avi  AirPods_2.avi  AirPods_3.avi  AirPods_Pro.avi  AirPods_Pro_2.avi  Beats_Fit_Pro.avi
